2003-08-08  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/tcl/Trafo.c (add_variable_quals):
	Fixup error in generated C code, the was
	a disconnect between local variables that
	were both named obj. The fix was to comment
	out the obj variable in the inner scope so
	that the one from the enclosing scope would
	always be used.
	* tests/parsers/tcl.test: Add test case
	for core dump in var resolution code.
	The test does not pass but that is due
	to another bug.

2003-08-08  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/common/parser.c (put_cross_ref):
	Remove abort call when bad input is passed
	in to an xref call. There is no reason to
	abort here and no other bad input checks
	call abort.
	* tests/parsers/tcl.test: Add example that
	caused abort to be invoked when writing
	an xref.

2003-08-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/misc.tcl (sn_load_xref): Use list command
	when creating cbrowser2 command so that paths
	with spaces in them work properly.

2003-08-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/misc.tcl (load_xref_pipe, event_LoadPipeInput):
	Add check for the err "abnormal program termination"
	since this seems to be included when a Win32
	child process crashes.

2003-07-25  Mo DeJong  <mdejong@users.sourceforge.net>

	* mkdist.txt: Add short description of steps
	one must take to create a SN dist file.

2003-07-23  Mo DeJong  <mdejong@users.sourceforge.net>

	Add SN-52A1-2003-07-23 tag.

2003-07-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* NEWS: Add release notes for 5.1 series and
	5.2a1.
	* README.TXT: Note PHP and Python support.
	* configure: Regen.
	* configure.in: Change version to 5.2a1.
	* mkdist.sh: Copy NEWS file to NEWS.TXT
	in the toplevel dist dir.

2003-07-22  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/editorpane.tcl (goto): When looking up
	the line and column position of a symbol in
	the editor, first search for symbol and
	then for the highlight marker. This will